@@ -24,7 +24,6 @@ import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.apache.lucene.index.Impact;
 import org.apache.lucene.index.Impacts;
 import org.apache.lucene.index.ImpactsEnum;
@@ -101,7 +100,7 @@ public final class SynonymQuery extends Query {
 
     /** Builds the {@link SynonymQuery}. */
     public SynonymQuery build() {
-      Collections.sort(terms, Comparator.comparing(a -> a.term));
+      terms.sort(Comparator.comparing(a -> a.term));
       return new SynonymQuery(terms.toArray(new TermAndBoost[0]), field);
     }
   }
@@ -116,9 +115,14 @@ public final class SynonymQuery extends Query {
     this.field = Objects.requireNonNull(field);
   }
 
+  /** Returns the terms of this {@link SynonymQuery} */
   public List<Term> getTerms() {
-    return Collections.unmodifiableList(
-        Arrays.stream(terms).map(t -> new Term(field, t.term)).collect(Collectors.toList()));
+    return Arrays.stream(terms).map(t -> new Term(field, t.term)).toList();
+  }
+
+  /** Returns the field name of this {@link SynonymQuery} */
+  public String getField() {
+    return field;
   }
 
   @Override
@@ -232,8 +236,7 @@ public final class SynonymQuery extends Query {
       if (indexTerms == null) {
         return super.matches(context, doc);
       }
-      List<Term> termList =
-          Arrays.stream(terms).map(t -> new Term(field, t.term)).collect(Collectors.toList());
+      List<Term> termList = Arrays.stream(terms).map(t -> new Term(field, t.term)).toList();
       return MatchesUtils.forField(
           field,
           () -> DisjunctionMatchesIterator.fromTerms(context, doc, getQuery(), field, termList));
@@ -273,7 +276,8 @@ public final class SynonymQuery extends Query {
     }
 
     @Override
-    public Scorer scorer(LeafReaderContext context) throws IOException {
+    public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
+      final Scorer synonymScorer;
       List<PostingsEnum> iterators = new ArrayList<>();
       List<ImpactsEnum> impacts = new ArrayList<>();
       List<Float> termBoosts = new ArrayList<>();
@@ -305,45 +309,48 @@ public final class SynonymQuery extends Query {
       if (iterators.size() == 1) {
         final TermScorer scorer;
         if (scoreMode == ScoreMode.TOP_SCORES) {
-          scorer = new TermScorer(this, impacts.get(0), simScorer);
+          scorer = new TermScorer(impacts.get(0), simScorer);
         } else {
-          scorer = new TermScorer(this, iterators.get(0), simScorer);
+          scorer = new TermScorer(iterators.get(0), simScorer);
         }
         float boost = termBoosts.get(0);
-        return scoreMode == ScoreMode.COMPLETE_NO_SCORES || boost == 1f
-            ? scorer
-            : new FreqBoostTermScorer(boost, scorer, simScorer);
-      }
+        synonymScorer =
+            scoreMode == ScoreMode.COMPLETE_NO_SCORES || boost == 1f
+                ? scorer
+                : new FreqBoostTermScorer(boost, scorer, simScorer);
+      } else {
 
-      // we use termscorers + disjunction as an impl detail
-      DisiPriorityQueue queue = new DisiPriorityQueue(iterators.size());
-      for (int i = 0; i < iterators.size(); i++) {
-        PostingsEnum postings = iterators.get(i);
-        final TermScorer termScorer = new TermScorer(this, postings, simScorer);
-        float boost = termBoosts.get(i);
-        final DisiWrapperFreq wrapper = new DisiWrapperFreq(termScorer, boost);
-        queue.add(wrapper);
-      }
-      // Even though it is called approximation, it is accurate since none of
-      // the sub iterators are two-phase iterators.
-      DocIdSetIterator iterator = new DisjunctionDISIApproximation(queue);
+        // we use termscorers + disjunction as an impl detail
+        DisiPriorityQueue queue = new DisiPriorityQueue(iterators.size());
+        for (int i = 0; i < iterators.size(); i++) {
+          PostingsEnum postings = iterators.get(i);
+          final TermScorer termScorer = new TermScorer(postings, simScorer);
+          float boost = termBoosts.get(i);
+          final DisiWrapperFreq wrapper = new DisiWrapperFreq(termScorer, boost);
+          queue.add(wrapper);
+        }
+        // Even though it is called approximation, it is accurate since none of
+        // the sub iterators are two-phase iterators.
+        DocIdSetIterator iterator = new DisjunctionDISIApproximation(queue);
 
-      float[] boosts = new float[impacts.size()];
-      for (int i = 0; i < boosts.length; i++) {
-        boosts[i] = termBoosts.get(i);
-      }
-      ImpactsSource impactsSource = mergeImpacts(impacts.toArray(new ImpactsEnum[0]), boosts);
-      MaxScoreCache maxScoreCache = new MaxScoreCache(impactsSource, simScorer.getSimScorer());
-      ImpactsDISI impactsDisi = new ImpactsDISI(iterator, maxScoreCache);
+        float[] boosts = new float[impacts.size()];
+        for (int i = 0; i < boosts.length; i++) {
+          boosts[i] = termBoosts.get(i);
+        }
+        ImpactsSource impactsSource = mergeImpacts(impacts.toArray(new ImpactsEnum[0]), boosts);
+        MaxScoreCache maxScoreCache = new MaxScoreCache(impactsSource, simScorer.getSimScorer());
+        ImpactsDISI impactsDisi = new ImpactsDISI(iterator, maxScoreCache);
 
-      if (scoreMode == ScoreMode.TOP_SCORES) {
-        // TODO: only do this when this is the top-level scoring clause
-        // (ScorerSupplier#setTopLevelScoringClause) to save the overhead of wrapping with
-        // ImpactsDISI when it would not help
-        iterator = impactsDisi;
-      }
+        if (scoreMode == ScoreMode.TOP_SCORES) {
+          // TODO: only do this when this is the top-level scoring clause
+          // (ScorerSupplier#setTopLevelScoringClause) to save the overhead of wrapping with
+          // ImpactsDISI when it would not help
+          iterator = impactsDisi;
+        }
 
-      return new SynonymScorer(this, queue, iterator, impactsDisi, simScorer);
+        synonymScorer = new SynonymScorer(queue, iterator, impactsDisi, simScorer);
+      }
+      return new DefaultScorerSupplier(synonymScorer);
     }
 
     @Override
@@ -357,7 +364,7 @@ public final class SynonymQuery extends Query {
     assert impactsEnums.length == boosts.length;
     return new ImpactsSource() {
 
-      class SubIterator {
+      static class SubIterator {
         final Iterator<Impact> iterator;
         int previousFreq;
         Impact current;
@@ -439,7 +446,7 @@ public final class SynonymQuery extends Query {
                           .map(
                               impact ->
                                   new Impact((int) Math.ceil(impact.freq * boost), impact.norm))
-                          .collect(Collectors.toList());
+                          .toList();
                 } else {
                   impactList = impacts[i].getImpacts(impactsLevel);
                 }
@@ -529,12 +536,10 @@ public final class SynonymQuery extends Query {
     private final LeafSimScorer simScorer;
 
     SynonymScorer(
-        Weight weight,
         DisiPriorityQueue queue,
         DocIdSetIterator iterator,
         ImpactsDISI impactsDisi,
         LeafSimScorer simScorer) {
-      super(weight);
       this.queue = queue;
       this.iterator = iterator;
       this.maxScoreCache = impactsDisi.getMaxScoreCache();
